--- a/src/root.css
+++ b/src/root.css
@@ -1,8 +1,10 @@
 .root {
-    height: 100vh;
+    max-height: 100dvh;
+    overflow: hidden;
 }
 
 .body {
-    height: 100%;
+    max-height: 100dvh;
+    overflow: auto;
 }
 
