--- a/src/pages/ads/index.css
+++ b/src/pages/ads/index.css
@@ -1,15 +1,17 @@
 .car-list-container {
-  padding: 0px 60px 40px 60px;
+  padding: 0px 80px 40px;
+  padding-top: 120px;
   margin: 0 auto;
   overflow: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  height:100%;
 }
-  
+
 .car-list-box {
   display: flex;
-  justify-content: center;
+  justify-content: start;
   width: 100%;
 }
 
@@ -19,4 +21,71 @@
   overflow-x: auto;
   gap: 10px;
   max-width: 1500px;
-}  
+}
+
+.filter-container {
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  width: 100%;
+  padding: 30px 80px;
+  position: fixed;
+  background-color: white;
+  box-shadow: 0px 0.5px 20px rgba(0,0,0,0.2);
+}
+
+.text-input-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 40px;
+  width: 20%;
+  justify-content: space-between;
+  border: solid 1px #ded8d4;
+}
+
+.input {
+  width: 100%;
+  outline: none;
+  border: none;
+  margin: 0px;
+}
+
+
+.value-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
+}
+
+.value-filter {
+  display: flex;
+  flex-direction: row;
+  height: 40px;
+  gap: 20px;
+}
+
+.number-input {
+  margin: 0px;
+  height: 40px;
+  padding: 0 10px;
+}
+
+.search-button {
+  background-color: #ded8d4;
+  height: 40px;
+  width: 40px;
+  margin-left: 10px;
+}
+
+.invalid-message {
+  font-size: 11px;
+  color: red;
+}
+
+.filter-text {
+  font-size: 22px;
+  font-weight: 900;
+  margin-top: 5px;
+  margin-right: 30px;
+}
